# sonar-SLAM

./: .claudeignore  .gitignore  3D_BRAINSTORM.md  ABLATION.md  BRUCE_SLAM.md  CAVES.md  CHANGEMENTS_BRUCE.md  CLAUDE.md  CODE.md  CONFIGS.md  C_CAP_GTFREE.md  DATASETS.md  DEBUG_DISO.md  Discussion.md  ENSUITE.md  ENVOI_COLLEGUE.md  FABLE.md  HOLOOCEAN_3D_GUIDE.md  HOLOOCEAN_3D_SPECS.md  HOLOOCEAN_GARDE_FOU.md  IMU_ISSUE_REPORT.md  MEMOIRE.md  NOISE_MISSION.md  PIEGES.md  PISTE.md  PROGRESS.md  README.md  REFONTE_MISSION.md  SLAM_3D_MIGRATION.md  STAGE.md  SUITE.md  TESTS.md  TRAJ10_MISSION.md  TRAJ6_ANALYSE.md  TRAJ8_DESIGN.md  ULTIME.md  USBL_FACTEURS.md  ablation_diso_gt.py  analyse.sh  analyze_bodyframe.py  (+79 more)
.claude/: settings.json
DISO/: CMakeLists.txt  package.xml
DISO/config/: config_aracati2017.yaml  config_aracati2017_cmdvel.yaml  config_aracati2017_drift.yaml
DISO/launch/: aracati2017.launch  aracati2017_drift.launch  sonar_odometry.rviz
DISO/scripts/: bruce_save.py  gt_drift_node.py
DISO/src/: LocalMapping.cpp  MapPoint.cpp  MapPoint.h  System.cpp  Track.cpp  traj_se3_align.cpp
Paper/: COMPARE.md  index.html  main.tex
TESTS_image/: .gitignore
analysis/: analyze_drift.py  analyze_holoocean.py  analyze_origine.py  bilan_run.py  carte_2d_dense.py  carte_3d.py  caves_3d.py  compare_traj6.py  e10_richesse.py  etape0_seed_cap.py  filter_cloud.py  fusion_plus.py  gates_refonte.py  holoocean_report.py  inspect_bag.py  loops_dz_bench.py  paper_eval.py  paper_figs_origine.py  plot_trajectories.py  profiler_3d.py  profiler_slam_3d.py  render_compass_cloud.py  (+6 more)
(+302 files in other folders)
