<?xml version="1.0"?>
<package format="2">
  <name>direct_sonar_odometry</name>
  <version>0.0.0</version>
  <description>Direct Sonar Odometry</description>
  <maintainer email="da@todo.todo">da</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
</package>
